--- a/styling.css
+++ b/styling.css
@@ -2,6 +2,7 @@ body{
     margin: 0px;
     padding: 0px;
     background-color: rgb(63, 222, 243);
+    font-family: sans-serif;
    
     
 }
@@ -28,6 +29,9 @@ input {
     width: 340px;
     height: 30px;
     margin: 0px;
+    outline: 0;
+    border: 0;
+    border-radius: 2px;
 }
 
  
