--- a/styling.css
+++ b/styling.css
@@ -52,9 +52,8 @@ button{
     cursor: not-allowed;
     opacity: 1;
  }
- //  email.addEventListener("blur",function()
- //  {
- //      if(!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email.value)){
- //         alert("fuck u")
- //      }
- //  })
+ 
+ 
+ a{
+    padding-top: 5px;
+ }
