--- a/styling.css
+++ b/styling.css
@@ -72,4 +72,11 @@ button{
     flex-direction: column;
     gap:30px;
  }
- 
+ .function-2{
+    height: 100vh;
+    display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 50px
+
+ }
