--- a/styling.css
+++ b/styling.css
@@ -105,7 +105,8 @@ button{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap:30px;
+    gap:50px;
+    border: 10px black solid;
  }
  .function-2{
     height: 100vh;
