Added some style to page 4

--- a/styling.css
+++ b/styling.css
@@ -111,6 +111,7 @@ button{
  .function-2{
     height: 100vh;
     display: flex;
+    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 50px
